--- a/ui/src/assets/_components.css
+++ b/ui/src/assets/_components.css
@@ -93,3 +93,7 @@
   margin-top: 3rem;
   margin-bottom: 0;
 }
+
+.relative {
+  position: relative;
+}
